Fixes #3137: high contrast menu issues
Patch from Simon Bates (CLA on file) plus some additional fixes from me for
the background iframe sizing issues.

git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@8970 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/dijit.css
+++ b/themes/dijit.css
@@ -840,6 +840,11 @@ body .dijitAlignClient { position: absolute; }
 	margin:1px 0px;
 	border-collapse:collapse;
 	border-width:0px;
+	background-color:white;
+}
+
+.dijit_a11y .dijitMenuTable {
+	background-color:white !important;
 }
 
 .dijitMenuItem{
@@ -872,6 +877,11 @@ body .dijitAlignClient { position: absolute; }
 .dijitMenuItemLabel {
 	position: relative;
 	vertical-align: middle;
+}
+
+.dijit_a11y .dijitMenuItemHover .dijitMenuItemLabel {
+	border-width: 1px;
+	border-style: solid;
 }
 
 /* separator can be two pixels -- set border of either one to 0px to have only one */
